[package]
name = "toomuch"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "toomuch"
path = "src/bin/toomuch.rs"

[[bin]]
name = "greet"
path = "src/bin/greet.rs"

[dependencies]
font8x8 = "0.2"
glow = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
drm = "0.11"
evdev = "0.12"
gbm = { version = "0.14", features = ["drm-support"] }
gbm-sys = "0.3"
khronos-egl = { version = "6.0.0", features = ["static"] }
libc = "0.2"
minifb = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.95"
wasm-bindgen = "0.2.118"
web-sys = { version = "0.3.95", features = [
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "Window",
    "WebGl2RenderingContext",
    "console",
] }
